[gd_scene load_steps=17 format=2]

[ext_resource path="res://SemiGrappler/characters/SemiGrappler/projectiles/RockJump3.png" type="Texture2D" id=1]
[ext_resource path="res://SemiGrappler/characters/SemiGrappler/projectiles/RockJump2.png" type="Texture2D" id=2]
[ext_resource path="res://SemiGrappler/characters/SemiGrappler/projectiles/RockJump1.png" type="Texture2D" id=3]
[ext_resource path="res://SemiGrappler/characters/SemiGrappler/projectiles/RockJump.gd" type="Script" id=4]
[ext_resource path="res://characters/BaseChar.gdshader" type="Shader" id=5]
[ext_resource path="res://characters/BoxDraw.gd" type="Script" id=6]
[ext_resource path="res://sound/common/block.wav" type="AudioStream" id=7]
[ext_resource path="res://framework/FiniteStateMachine/StateMachine.gd" type="Script" id=8]
[ext_resource path="res://addons/collision_box/CollisionBox.gd" type="Script" id=9]
[ext_resource path="res://SemiGrappler/characters/SemiGrappler/projectiles/CooldownHitbox.gd" type="Script" id=10]
[ext_resource path="res://SemiGrappler/characters/SemiGrappler/projectiles/CooldownState.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/max_color_distance = 0.01
shader_param/super_dim = false
shader_param/use_outline = false
shader_param/outline_color = Color( 0, 0, 0, 1 )

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="CanvasItemMaterial" id=5]

[node name="Rockjump" type="Node2D"]
script = ExtResource( 4 )
dummy = true
region_rect_x = 1.0
beam_size_x = 42.3

[node name="Flip" type="Node2D" parent="."]

[node name="Sprite2D" type="AnimatedSprite2D" parent="Flip"]
unique_name_in_owner = true
frames = SubResource( 1 )
offset = Vector2( 0, -4 )

[node name="Particles" type="Node2D" parent="Flip"]
unique_name_in_owner = true

[node name="Sounds" type="Node2D" parent="."]

[node name="CollisionBox" type="Node2D" parent="."]
z_index = 1000
script = ExtResource( 9 )
__meta__ = {
"_editor_description_": ""
}
x = 5
y = -13
width = 15
height = 40
can_draw = false

[node name="Hurtbox" type="Node2D" parent="."]
z_index = 1000
script = ExtResource( 9 )
x = 5
y = -13
width = 15
height = 40
can_draw = false

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Default" type="Node2D" parent="StateMachine"]
material = SubResource( 2 )
z_index = 2
script = ExtResource( 11 )
__meta__ = {
"_editor_description_": ""
}
fallback_state = "Default"
sprite_animation = "Default"
anim_length = 41
move_x = 0
clash = false
num_hits = 99999
lifetime = 12
fizzle_on_ground = false
fizzle_on_walls = false

[node name="Hitbox" type="Node2D" parent="StateMachine/Default"]
z_index = 1000
script = ExtResource( 10 )
__meta__ = {
"_editor_description_": ""
}
x = 8
y = -13
width = 8
height = 35
hitlag_ticks = 0
victim_hitlag = 4
can_counter_hit = false
sdi_modifier = "-1.5"
hit_sound = ExtResource( 7 )
dir_x = "-2.0"
dir_y = "-0.5"
knockback = "3"
pushback_x = "0"
grounded_hit_state = "HurtAerial"
knockdown_extends_hitstun = false
disable_collision = false
ground_bounce = false
start_tick = -40
active_ticks = -91
loop_active_ticks = 1
loop_inactive_ticks = 1
cooldown = 16
cooldown_counter = 16

[node name="BoxDraw" type="Node2D" parent="."]
visible = false
z_index = 4096
script = ExtResource( 6 )

[node name="Sprite2" type="Sprite2D" parent="."]
material = SubResource( 4 )
position = Vector2( -9, -59 )
texture = ExtResource( 3 )
centered = false

[node name="Sprite3" type="Sprite2D" parent="."]
material = SubResource( 3 )
position = Vector2( 20, -59 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 1, 0, 182, 92 )

[node name="Sprite4" type="Sprite2D" parent="."]
material = SubResource( 5 )
position = Vector2( 61, -59 )
texture = ExtResource( 1 )
centered = false
